--- a/WEEK  - HTML - CSS/CSS exercices/project Portfolio v2/package.json
+++ b/WEEK  - HTML - CSS/CSS exercices/project Portfolio v2/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "framer-motion": "^11.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
-    "framer-motion": "^11.0.3",
-    "react-type-animation": "^3.2.0",
     "react-intersection-observer": "^9.8.0",
-    "@emailjs/browser": "^4.1.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
